[package]
name = "jbonsai"
version = "0.1.0"
edition = "2021"

rust-version = "1.75.0"

[features]
default = ["htsvoice"]
binary = ["htsvoice", "dep:hound"]
htsvoice = ["dep:nom","dep:serde"]

[[example]]
name = "is-bonsai"
required-features = ["binary"]
[[example]]
name = "genji"
required-features = ["binary"]

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.56"
approx = "0.5.1"

nom = { version = "7.1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
hound = { version = "3.5.1", optional = true }
jlabel = "0.1.3"
jlabel-question = { version = "0.1.3", features = ["regex"]}
