[package]
name = "jbonsai"
version = "0.1.1"
edition = "2021"

rust-version = "1.75.0"

description = "Voice synthesis library for Text-to-Speech applications (Currently HTS Engine rewrite in Rust language)."
license = "BSD-3-Clause"
repository = "https://github.com/jpreprocess/jbonsai"
keywords = ["tts", "openjtalk", "library"]
categories = ["multimedia::audio"]
documentation = "https://docs.rs/jbonsai"

[features]
default = ["htsvoice"]
binary = ["htsvoice", "dep:hound"]
htsvoice = ["dep:nom"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "is-bonsai"
required-features = ["binary"]
[[example]]
name = "genji"
required-features = ["binary"]

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.56"
approx = "0.5.1"

serde = { version = "1.0", features = ["derive"] }

nom = { version = "7.1.3", optional = true }
hound = { version = "3.5.1", optional = true }

jlabel = { version = "0.1.4", features = ["serde"] }
jlabel-question = { version = "0.1.4", features = ["regex", "serde"] }
